packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/Workflow_Trigger__c.object-meta.xml
<CustomObject>
    <description>Rules that auto-start a Workflow_Instance__c when a record on the target SObject matches the configured condition tree. Apex trigger for the target object is provisioned on first use.</description>
    <label>Workflow Trigger</label>
    <nameField>
        <label>Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>