packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <description>If false, this trigger is skipped during evaluation.</description>
    <type>Checkbox</type>
</CustomField>