packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/fields/Condition_JSON__c.field-meta.xml
<CustomField>
    <fullName>Condition_JSON__c</fullName>
    <label>Condition JSON</label>
    <description>Serialised AND/OR condition tree. Shape: { "logic": "AND|OR", "rules": [{"field":"StageName","op":"EQUALS","value":"Qualification"}, ...] }. Empty/null means fire on every event.</description>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>