packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <description>When the trigger fires: Created, Updated, or Created_or_Updated.</description>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>