packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/fields/Initial_State_Key__c.field-meta.xml
<CustomField>
    <fullName>Initial_State_Key__c</fullName>
    <label>Initial State Key</label>
    <description>Optional. State key the new Workflow_Instance__c should start at. If blank, the workflow definition's first state is used.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>