packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <description>SObject API name (e.g. Opportunity, Lead, Case__c) this trigger evaluates on.</description>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>