packages/pulse-core/force-app/main/default/objects/Workflow_Trigger__c/fields/Workflow_Definition__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Definition__c</fullName>
    <label>Workflow Definition</label>
    <referenceTo>Workflow_Definition__c</referenceTo>
    <relationshipLabel>Triggers</relationshipLabel>
    <relationshipName>Triggers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>